# c_template

./: CMakeLists.txt  README.md
doc/: CMakeLists.txt
doc/release/: CMakeLists.txt
doc/sw/: CMakeLists.txt  sw.tex
doc/sw/chapters/: chapter1.tex  chapter2.tex
doc/sw/configuration/: codeCommands.tex  commands.tex  packages.tex
doc/sw/references/: abbreviations.tex  bibliography.bib  revisions.tex
doc/sw/template-latex/: latex-report-de.lang  latex-report-en.lang  latex-report-fr.lang  latex-report.cls
project/: project.cmake
src/: CMakeLists.txt  CentrifugeTest.c  CentrifugeTest.h  Fault.cpp  LockGuard.cpp  LockGuard.h  Motor.c  Motor.h  StateMachine.c  StateMachine.h  fb_allocator.c  fb_allocator.h  main.c  sm_allocator.c  sm_allocator.h  thread.c  x_allocator.c  x_allocator.h
tests/: CMakeLists.txt
