#[[------------------------------------------

	-------------------------------
	gsandro's cmake script
	-------------------------------
	
	Project: Generic

---------------------------------------------]]# 


if(NOT OPTION_BUILD_SRC)
    return()
endif()

add_custom_target(src)

# add_subdirectory(bla)